<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/fLGiaSA"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/contenido_gia"
                android:textColor="@color/text_d"
                />
        </LinearLayout>
    </FrameLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/green"
        android:elevation="10dp"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/title_LA"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_margin="8dp"
            android:layout_weight="1"
            android:text="Ajustes"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="19sp"
            android:visibility="visible"
            android:textColor="@color/text_siempre_banco"
            />

    </LinearLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tVRuta_AA"
                style="@style/mTextSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="@dimen/topSetting"
                android:text="Ruta" />


            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:neumorph_shadowElevation="2dp"
                android:layout_margin="0dp"
                style="@style/CustomShapeAppearance"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <TextView
                        style="@style/mTextSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/titulo_separador"
                        tools:ignore="RtlSymmetry" />

                    <soup.neumorphism.NeumorphCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        app:neumorph_shapeType="pressed"
                        app:neumorph_shadowElevation="2dp"
                        android:padding="8dp"
                        android:layout_weight="1"
                        style="@style/CustomShapeAppearance"
                        >

                        <EditText
                            android:id="@+id/eTSeparador_SA"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:background="@color/colorTransp"
                            android:hint=";"
                            android:padding="9dp"
                            android:textColor="@color/text_l"
                            android:textColorHint="@color/text_l"
                            android:textColorLink="@color/colorTransp"
                            android:textSize="20sp" />

                    </soup.neumorphism.NeumorphCardView>
                </LinearLayout>

            </soup.neumorphism.NeumorphCardView>


            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:neumorph_shadowElevation="2dp"
                android:layout_margin="0dp"
                style="@style/CustomShapeAppearance"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <TextView
                        style="@style/mTextSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/fontSize_Ajustes"
                        tools:ignore="RtlSymmetry" />

                    <soup.neumorphism.NeumorphCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        app:neumorph_shapeType="pressed"
                        app:neumorph_shadowElevation="2dp"
                        android:padding="8dp"
                        android:layout_weight="1"
                        style="@style/CustomShapeAppearance"
                        >

                        <EditText
                            android:id="@+id/eTFontSize_SA"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:layout_weight="1"
                            android:background="@color/colorTransp"
                            android:padding="9dp"
                            android:textColor="@color/text_l"
                            android:textColorHint="@color/text_l"
                            android:textColorLink="@color/colorTransp"
                            android:hint="@string/fontSize_defecto"
                            android:inputType="number"
                            android:textSize="20sp" />

                    </soup.neumorphism.NeumorphCardView>
                </LinearLayout>

            </soup.neumorphism.NeumorphCardView>


            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:neumorph_shadowElevation="2dp"
                android:layout_margin="0dp"
                style="@style/CustomShapeAppearance"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <TextView
                        style="@style/mTextSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:gravity="center_vertical"
                        android:paddingStart="16dp"
                        android:layout_weight="1"
                        android:text="@string/space_learn"
                        tools:ignore="RtlSymmetry" />

                    <soup.neumorphism.NeumorphCardView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:gravity="center_vertical"
                        app:neumorph_shapeType="pressed"
                        app:neumorph_shadowElevation="2dp"
                        android:padding="8dp"
                        android:layout_weight="1"
                        style="@style/CustomShapeAppearance"
                        >

                        <EditText
                            android:id="@+id/eTNSpaceLearn_SA"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="8dp"
                            android:background="@color/colorTransp"
                            android:padding="9dp"
                            android:textColor="@color/text_l"
                            android:textColorHint="@color/text_l"
                            android:textColorLink="@color/colorTransp"
                            android:inputType="number"
                            android:hint="0"
                            android:textSize="20sp" />

                    </soup.neumorphism.NeumorphCardView>
                </LinearLayout>

            </soup.neumorphism.NeumorphCardView>


            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:neumorph_shadowElevation="2dp"
                android:padding="19dp"
                style="@style/CustomShapeAppearance"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    >

                    <Switch
                        android:id="@+id/sWTema_SA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4dp"
                        android:hint="@string/sw_temaOscuro"
                        android:layoutDirection="rtl"
                        android:textColor="@color/text_hint"
                        android:textColorHint="@color/text_hint" />
                </LinearLayout>
            </soup.neumorphism.NeumorphCardView>


            <soup.neumorphism.NeumorphCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:neumorph_shadowElevation="2dp"
                android:padding="19dp"
                style="@style/CustomShapeAppearance"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:paddingStart="16dp"
                    >

                    <TextView
                        style="@style/mTextSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/topSetting"
                        android:text="Pronunciar las tarjetas P/R" />

                    <Spinner
                        android:id="@+id/sPPreguntaTTS_SA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp" />

                    <TextView
                        style="@style/mTextSetting"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/topSetting"
                        android:text="Respuesta" />

                    <Spinner
                        android:id="@+id/sPRespuestaTTS_SA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:padding="8dp" />
                </LinearLayout>

            </soup.neumorphism.NeumorphCardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <soup.neumorphism.NeumorphButton
                    android:id="@+id/btnGia_SA"
                    style="@style/CustomNeuButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:paddingHorizontal="50dp"
                    app:neumorph_shadowElevation="2dp"
                    android:text="Guía"
                    android:textColor="@color/text_d" />

                <soup.neumorphism.NeumorphButton
                    android:id="@+id/btnAcepar_SA"
                    style="@style/CustomNeuButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="24dp"
                    app:neumorph_shadowElevation="2dp"
                    android:text="@string/aceptar"
                    android:textColor="@color/text_d" />

            </LinearLayout>

        </LinearLayout>
    </ScrollView>
</LinearLayout>